<resources>
    <string name="app_name">MathSolar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_project_not_found">Project not found</string>
    <string name="err_loading_projects">Error while loading projects</string>
    <string name="label_all">All projects</string>
    <string name="no_projects_all">You don\'t have any projects yet</string>
    <string name="label_connected">Connected to the grid</string>
    <string name="no_projects_connected">You don\'t have any projects connected to the grid yet</string>
    <string name="label_hybrid">Hybrids</string>
    <string name="no_projects_hybrid">You don\'t have hybrid projects yet</string>
    <string name="label_isolated">Isolated</string>
    <string name="no_projects_isolated">You don\'t have isolated projects yet</string>
    <string name="label_favorites">Favorites</string>
    <string name="no_projects_favorites">You don\'t have favorites projects yet</string>
    <string name="successfully_saved_project_message">Project saved</string>
    <string name="successfully_added_project_message">Project added</string>
    <string name="successfully_deleted_project_message">Project was deleted</string>
    <string name="project_marked_favorite">Project marked favorite</string>
    <string name="project_removed_favorite">Project removed favorite</string>
    <string name="more">More</string>
    <string name="content_description_more">Show more options</string>
    <string name="refresh">Refresh</string>
    <string name="content_description_refresh">Refresh</string>
    <string name="sort_by">Sort by</string>
    <string name="content_description_sort_by">Sort the list of projects by:</string>
    <string name="new_first">New first</string>
    <string name="old_first">Old first</string>
    <string name="content_description_new_first">New first</string>
    <string name="content_description_old_first">Old first</string>
    <string name="filter_list">Filter the list projects</string>
    <string name="content_description_filter">Filter the list of projects by category</string>
    <string name="content_description_fab_projects">Add new project</string>
    <string name="projects">Projects</string>
    <string name="action_1_item_project">Expand</string>
    <string name="subtitle_projects_collapsing_toolbar">Photovoltaic projects at your fingertips</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search in the list projects</string>
    <string name="content_description_item_ic_projectType">This project is connected to the gride</string>
    <string name="content_description_item_img">The picture of the project</string>
    <string name="content_description_item_button_share">Share this project</string>
    <string name="content_description_item_button_favorite">Set favorite this project</string>
    <string name="fragment_login_subtitle">Solar energy and engineering together</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_as_a_guest">Login as a guest</string>
    <string name="err_fields_empty">The fields are empty</string>
    <string name="err_invalid_email">Insert a valid email</string>
    <string name="err_password_short">The password must have a minimun of 8 characters</string>
    <string name="err_incorrect_password">Incorrect password. Verify that everything is in order.</string>
    <string name="err_unregistered_email">Unregistered email account. Verify that everything is spelled correctly.</string>
    <string name="err_too_many_requests">We have blocked all requests from this device due to unusual activity. Try again later.</string>
    <string name="err_internet_connection">An error has occurred with the internet connection. Check that everything is OK and try again.</string>
    <string name="err_something_went_wrong">Something went wrong. The reasons are unknown at this time. Sorry for the inconvenience.</string>
    <string name="no_error_key">No error key</string>
    <string name="register_title_01">Create an account</string>
    <string name="register_subtitle_01">Enter your name along with your email address to start your registration.</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="err_email_is_already_in_use">This email is already in use</string>
    <string name="register_title_02">Create a password</string>
    <string name="register_subtitle_02">Enter a password and retype it below to compare if they are the same. Must be longer than eight characters</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_passwords_are_not_the_same">Passwords are not the same</string>
    <string name="register_title02">Take o select a picture!</string>
    <string name="register_subtitle_03">Click on the icon above to select your profile picture. (optional)</string>
    <string name="bottom_sheet_select_picture_title">Choose an option</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="err_no_gallery_app">A gallery app was not found</string>
    <string name="err_permission_denied">The permit has been denied. To enable it, try again or go to the app settings.</string>
    <string name="settings">Settings</string>
    <string name="err_user_data_has_been_lost">Your data entered has been lost. Verify that everything is in order and try again.</string>
    <string name="err_list_projects_empty">So far you do not have any dimensioning. Start to create one with the button below.</string>
    <string name="content_description_list_projects_empty">Your project list is empty. Start creating one by pressing the button below.</string>
    <string name="home">Home</string>
    <string name="content_description_item_ic_home">Go to the home screen</string>
    <string name="content_description_item_ic_wb_sunny">Go to the projects screen</string>
    <string name="content_description_item_ic_calculate">Go to the calculators screen</string>
    <string name="calculators">Calculators</string>
    <string name="content_description_item_ic_construction">Go to the tools screen</string>
    <string name="tools">Tools</string>
    <string name="content_description_item_ic_school">Go to the learning screen</string>
    <string name="learning">Learning</string>
    <string name="bookmark">Bookmark</string>
    <string name="content_description_item_ic_bookmark">Saved news</string>
    <string name="category">Category</string>
    <string name="content_description_item_ic_category">Choose a category</string>
    <string name="history">History</string>
    <string name="content_description_item_ic_history">History of read news</string>
    <string name="err_timeout">Timeout</string>
    <string name="err_api_key_limited">API Key Limited</string>
    <string name="err_articles_not_found">Articles not found</string>
    <string name="err_user_data_not_found">Sorry, your data could not be recovered.</string>
    <string name="err_project_not_found">Project not found!</string>
    <string name="chip_solar_power">#SolarPower</string>
    <string name="chip_solar_panels">#SolarPanels</string>
    <string name="chip_thermal_systems">#ThermalSystems</string>
    <string name="chip_climate_change">#ClimateChange</string>
    <string name="chip_environment">#Environment</string>
    <string name="chip_sustainability">#Sustainability</string>
    <string name="err_article_not_found">Article not found!</string>
    <string name="err_loading_articles">Error while loading articles.</string>
    <string name="label_bookmark">Your saved list</string>
    <string name="no_articles_bookmark">So far you don\'t have any article saved.</string>
    <string name="label_history">History</string>
    <string name="no_articles_viewed">Your search history list is empty.</string>
    <string name="no_articles_all">Hmm, how strange, there are no articles…</string>
    <string name="article_marked_bookmark">Article was saved in your personal list.</string>
    <string name="article_deleted_bookmark">Article was deleted from your personal list.</string>
    <string name="err_article_api_unknow_host">There was an error requesting the information from the news server. Sorry for the inconvenience</string>
    <string name="err_nrel_api_unknow_host">There was an error requesting the information from the NREL server. Sorry for the inconvenience</string>
    <string name="label_all_articles">Articles</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share">Share</string>
    <string name="content_description_item_ic_share">Share</string>
    <string name="link">Link</string>
    <string name="content_description_item_ic_link">Get the link</string>
    <string name="articles">Articles</string>
    <string name="content_description_item_ic_article">Go to the articles screen</string>
    <string name="new_custom">New</string>
    <string name="no_internet_connection">You don\'t currently have internet</string>
    <string name="internet_connection_restored">The internet connection has been restored</string>
    <string name="article_card_transition_name">article_card_%1$s</string>
    <string name="article_card_detail_transition_name">article_card_detail</string>
    <string name="navigate_back_icon_content_desc">Navigate back</string>
    <string name="fragment_addedit_project_00_title">Choose a project type.</string>
    <string name="fragment_addedit_project_00_subtitle">Select an option below to continue sizing your project</string>
    <string name="radio_button_option_01">Solar panels without batteries</string>
    <string name="radio_button_option_02">Solar panels with batteries</string>
    <string name="cd_image_close_fragment_addedit">Close this section</string>
    <string name="fragment_addedit_project_01_title">Select your rate type.</string>
    <string name="fragment_addedit_project_01_subtitle">Choose at the bottom the electricity rate of the place where you would like to install solar panels.</string>
    <string name="rate_type">Rate type</string>
    <string name="rate">Rate</string>
    <string name="fragment_addedit_project_02_title">Average consumption.</string>
    <string name="fragment_addedit_project_02_subtitle">Specify wheter your rate is monthtly or bimonthly and then covers at least one year of the entity\'s electricity consumption.</string>
    <string name="radio_button_addedit_project_02_option_01">Monthly</string>
    <string name="radio_button_addedit_project_02_option_02">Bimonthly</string>
    <string name="cd_image_add_payment_fragment_addedit">Add payment</string>
    <string name="payment">Payment</string>
    <string name="mexican_pesos">Mexican pesos</string>
    <string name="err_field_empty">This field cannot be empty.</string>
    <string name="err_payment_equals_or_minor_to_zero">Write an amount greater than zero.</string>
    <string name="err_quantity_not_valid">Insert a valid quantity.</string>
    <string name="consumption">Consumption</string>
    <string name="quantity">Quantity</string>
    <string name="fragment_addedit_project_03_title">Savings percentage.</string>
    <string name="fragment_addedit_project_03_subtitle">Indicate the percentage of savings you would like to cover with solar panels.</string>
    <string name="average_consumption">Average consumption:</string>
    <string name="saving">Saving:</string>
    <string name="change_units">Change units</string>
    <string name="maximum_value_slider">125.0</string>
    <string name="minimum_value_slider">1.0</string>
</resources>