<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.listocalixto.android.mathsolar.presentation.auth.register.RegisterViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetViewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_24sdp"
        tools:context=".ui.auth.register.Register03BottomSheet">

        <TextView
            android:id="@+id/text_titleBottomSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_select_picture_title"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="?attr/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/image_gallery"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:contentDescription="@string/app_name"
            android:onClick="@{() -> registerViewModel.onGalleryOpen()}"
            android:src="@drawable/ic_photo_library"
            app:layout_constraintStart_toStartOf="@id/text_titleBottomSheet"
            app:layout_constraintTop_toBottomOf="@+id/text_titleBottomSheet" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/gallery"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@id/image_gallery"
            app:layout_constraintStart_toStartOf="@id/image_gallery"
            app:layout_constraintTop_toBottomOf="@id/image_gallery" />

        <ImageView
            android:id="@+id/image_camera"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_48sdp"
            android:contentDescription="@string/app_name"
            android:onClick="@{() -> registerViewModel.onCameraOpen()}"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@id/image_gallery"
            app:layout_constraintStart_toEndOf="@id/image_gallery"
            app:layout_constraintTop_toTopOf="@id/image_gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/camera"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="@id/image_camera"
            app:layout_constraintStart_toStartOf="@id/image_camera"
            app:layout_constraintTop_toBottomOf="@id/image_camera" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>